# airglowrsss

./: .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  test.txt  workspace.yaml
.github/workflows/: ci.yml
.ipynb_checkpoints/: README-checkpoint.md
DataManagement/: .flake8  Doy2Date.pl  Emailer.py  README.md  Sender.pl  Sender.py  Sorter.py  Sorter_OSN.py  TemperatureLogfileRotate.pl  Tracker.py  Zip_COL.pl  Zip_CTO.pl  Zip_PERU.py  Zipper.py  copy_cas01_hka_data.py  create_and_send_file.pl  create_and_send_file.sh  dantest.txt  list_asi01_hka.sh  list_fpi05_uao.sh  list_fpi06_par.sh  list_nfi01_hka.sh  list_pic02_cto.sh  list_pic04_mor.sh  list_scn0L_cto.sh  list_scn0U_caj.sh  minime_control.py  pyproject.toml  sync_asi01_hka.py  sync_asi01_hka.sh  sync_fpi05_uao.py  sync_fpi06_par.py  sync_nfi01_hka.py  sync_nfi01_hka.sh  sync_pic04_mor.py  sync_scn0L_cto.sh  sync_scn0U_caj.py
DataManagement/airglow/: Sender.py
DataManagement/dagster/: Dockerfile  pyproject.toml
DataManagement/dagster/dagster_airglow/: assets.py  definitions.py  sensors.py
DataManagement/dagster/dagster_airglow_tests/: test_instrument_upload_sensor.py
DataManagement/dagster/dagster_airglow_tests/integration_tests/: conftest.py  test_instrument_upload_sensor.py
DataManagement/tests/: test_sender.py
DataManagement/tests/sample_files/: foo.txt
Matlab/DateTime/: date2doy.m  date2jd.m  doy2date.m  month2str.m
Matlab/Spatial_Cal/: ImagerSpatialCal_BH.m  cnv_thph2xy.m  cnv_xy2thph.m  starPassFilter.m  validateSpatialCal.m  yale_catalogue.mat
Matlab/Spatial_Calibration/: ImagerSpatialCalib.m  RunSpatialCalib.m
Matlab/Utilities/: TimezoneConvert.m  cxcorr2fft.m  exportfig.m  read_apkp.m  screen2eps.m  screen2png.m  wmean.m
Matlab/ge_toolbox/: ge_IGRFGrid.m  ge_MagLatLonGrid.m  ge_cajimage.m  ge_casiimage.m  ge_cnfiimage.m  ge_picassoimage.m  ge_plot_fieldlines.m  ge_radarbeam.m  ge_sami3.m
PICASSO/: CDAS.xml
PICASSO/cdas/: CDAS.xml  Makefile  Makefile.in  cdas.kdev4  cdas.kdevelop  cdas.kdevses  config.h  config.status  configure  configure.in
PICASSO/cdas_gcc4/: AUTHORS  Doxyfile  Makefile.in  cdas.kdevelop.pcs  configure
PICASSO/cdas_gcc4/src/: CDAS.conf  CDAS.h  CameraIO_Linux.cpp  CameraIO_LinuxPPI.cpp  Makefile.am  Makefile.in  ServerCommands.h  Socket.h  SunAndMoon.cpp  calibration.cpp  calibration.h  camera.h  cameraandor.cpp  cameraapogee.cpp  camerasbig.cpp  camerasbiguniv.h  ccd.h  configuration.cpp  configuration.h  directories.cpp  directories.h  error.txt  filterwheel.cpp  filterwheel.h  filterwheelcfwl.cpp  filterwheelfli.cpp  filterwheelfli.h  filterwheelserial.h  image.cpp  ksbigictl.h  ksbiglptd.h  ksbiglpthw.h  ksbiglptmain.h  logger.h  lsbiglptcam.h  lsbigusbcam.h  main.cpp  pvcam.h  schedule.cpp.save  schedule.h  (+6 more)
PICASSO/doc/: README.PICASSO3
PICASSO/fltkclient/: AUTHORS  Doxyfile  Makefile  Makefile.am  Makefile.in  acinclude.m4  config.h  config.h.in  config.status  configure  configure.in  configure.in.in  fltkclient.kdevelop  fltkclient.kdevelop.pcs  fltkclient.kdevprj  fltkclient.kdevses  fltkclient.lsm  libtool  subdirs
PICASSO/fltkclient/fltkclient/: ClientSocket.cpp  ClientSocket.h  Makefile  Makefile.am  Makefile.in  Socket.cpp  client.cpp  client.h  fltkclientUI  fltkclientUI.cxx  fltkclientUI.h  main.cpp  schedule.h
PICASSO/fltkclient/fltkclient/docs/: Makefile  Makefile.in
PICASSO/fltkclient/fltkclient/docs/en/: Makefile  Makefile.in
PICASSO/pth/: Makefile  pth  pth.c
PICASSO/ptiff/: Fl_Image_Display.H  Fl_Image_Display.cxx  Fl_TIFF_Image.H  Fl_TIFF_Image.cxx  Makefile  main.cxx  ptiffUI.cxx  ptiffUI.fl  ptiffUI.h  test.txt  util.cxx  util.h
PICASSO/scripts/: 50-picasso.rules  CDAS_monitor.pl  TifImagePlugin.py  atnight.py  cdasdown.pl  cp_script.sh  crontab.airglow  focus_viewer.py  init.d-picasso  lpcperl.pl  peripherals_off.sh  peripherals_on.sh  reversetunnel.sh  rsync_script.sh  run_cdas  sbigfindccd  (+2 more)
Python/: setup.py
scripts/: FPIcontroler.py  NATION.py  cleanup_X300.py  ncdump_pdf.py  obsfile_nation.txt  obsfile_renoir.txt  plot_CASES_RT.py  plot_NATIONmap_RT.py  process_SkyMon.py  process_UAO_temperatures.py  reprocess_UAO_plots.py  sites_renoir.txt  testNATION.py  testNATION2.py
tests/: pytest.ini  test_instrument_upload_sensor.py
(+203 files in other folders)
