####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = fltkclient

## INCLUDES were found outside kdevelop specific part

fltkclient_SOURCES = client.cpp Socket.cpp ClientSocket.cpp fltkclientUI.cxx main.cpp 
fltkclient_LDADD   =  -lm


EXTRA_DIST = main.cpp fltkclientUI.cxx fltkclientUI.h ClientSocket.cpp ClientSocket.h Socket.cpp SocketException.h Socket.h client.cpp client.h schedule.h SunAndMoon.h ServerCommands.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
fltkclient_LDFLAGS = $(all_libraries) 
                                                                                
